--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>About Me</title>
-<link rel="stylesheet" href="aboutme.css" media="screen">
+<link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
 </head>
 <body>
 <p>About Me</p>
