--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>About Me</title>
-<link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
+<link rel="stylesheet" href="aboutme.css" media="screen">
 </head>
 <body>
 <p>About Me</p>
@@ -11,7 +11,6 @@
     <div class="image">
       <img src= https://i.postimg.cc/gkkPzzpv/judenie.jpg/ alt=judenie</div>
       <div class="flex-container">
-         
 <ul>
   <li>
     A 23 year old
@@ -25,8 +24,9 @@
       <li>
       A bookworm
         </li>
+        </ul>
     <h3>Random Facts</h3>
-    <ol>
+    <ol id="newFact">
       <li>
       I like watching Star Trek
       </li>
@@ -39,4 +39,11 @@
       <li>
       I've been to the Mexican border at Tijuana and San Diego
       </li>
+      </ol>
+      <button id="button"
+        onclick="myFunction()">
+        Click for another Random Fact </button>
+      </div>
+      <script src="script.js"></script>
+      </body>
 </html>
