--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <p>About Me</p>
+    <button onclick="myfuntion()">ClickMe!</button>
+    <h1 id="name">Judenie</h1>
+    <div id = "clickName">onclick="switchName('Juju')"</div>
 <h1> Judenie </h1>
 <h2>Who is Judenie?</h2>
     <div class="image">
