--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>About Me</p>
     <button onclick="myfuntion()">ClickMe!</button>
     <h1 id="name">Judenie</h1>
-    <div id = "clickName">onclick="switchName('Juju')"</div>
+    <div id = "clickName"</div>
 <h1> Judenie </h1>
 <h2>Who is Judenie?</h2>
     <div class="image">
