--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <button onclick="myfuntion()">ClickMe!</button>
     <h1 id="name">Judenie</h1>
     <div id = "clickName"</div>
-<h1> Judenie </h1>
+      <script src="script.js"></script>
+    <h1> Judenie </h1>
 <h2>Who is Judenie?</h2>
     <div class="image">
       <img src= https://i.postimg.cc/gkkPzzpv/judenie.jpg/ alt=judenie</div>
