--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <p>About Me</p>
     <button onclick="myfuntion()">ClickMe!</button>
-    <h1 id="name">Judenie</h1>
+    <h1 id="name"</h1>
     <div id = "clickName"</div>
       <script src="script.js"></script>
     <h1> Judenie </h1>
