--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
 </head>
 <body>
 <p>About Me</p>
-    <button onclick="myfuntion()">ClickMe!</button>
-    <h1 id="name"</h1>
+    <h1 id ='NickName'> Judenie </h1>
+    <button onclick="changeName()">ClickMe!</button>
     <div id = "clickName"</div>
-      <script src="script.js"></script>
-    <h1> Judenie </h1>
-<h2>Who is Judenie?</h2>
+      <script src="script.js"></script><h2>Who is Judenie?</h2>
     <div class="image">
       <img src= https://i.postimg.cc/gkkPzzpv/judenie.jpg/ alt=judenie</div>
       <div class="flex-container">
