--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <p>About Me</p>
     <h1 id ='NickName'> Judenie </h1>
     <button onclick="changeName()">ClickMe!</button>
-    <div id = "clickName"</div>
-      <script src="script.js"></script><h2>Who is Judenie?</h2>
+    <h2>Who is Judenie?</h2>
     <div class="image">
       <img src= https://i.postimg.cc/gkkPzzpv/judenie.jpg/ alt=judenie</div>
       <div class="flex-container">
