--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <p>About Me</p>
-    <h1 id ='NickName'> Judenie </h1>
-    <button onclick="changeName()">ClickMe!</button>
+    <h1> Judenie </h1>
+    <button onclick="changeName()">NickName?</button>
     <h2>Who is Judenie?</h2>
     <div class="image">
       <img src= https://i.postimg.cc/gkkPzzpv/judenie.jpg/ alt=judenie</div>
