--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <p>About Me</p>
-    <h1> Judenie </h1>
-    <button onclick="changeName()">NickName?</button>
+    <h1 class= id= "name"> Judenie </h1>
+    <button onclick="myFunction()">ClickMe!</button>
+    <div class= "Nickname"
     <h2>Who is Judenie?</h2>
     <div class="image">
       <img src= https://i.postimg.cc/gkkPzzpv/judenie.jpg/ alt=judenie</div>
