--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>About Me</p>
     <h1 class= id= "name"> Judenie </h1>
     <button onclick="myFunction()">ClickMe!</button>
-    <div class= "Nickname"
+    <div class= "Nickname">
     <h2>Who is Judenie?</h2>
     <div class="image">
       <img src= https://i.postimg.cc/gkkPzzpv/judenie.jpg/ alt=judenie</div>
