--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <p>About Me</p>
-    <h1 class= id= "name"> Judenie </h1>
-    <button onclick="myFunction()">ClickMe!</button>
-    <div class= "Nickname">
+    <h1> Judenie </h1>
+    <button id= "button1"
+            onclick="myFunction()">ClickMe!</button>
     <h2>Who is Judenie?</h2>
     <div class="image">
       <img src= https://i.postimg.cc/gkkPzzpv/judenie.jpg/ alt=judenie</div>
@@ -42,7 +42,7 @@
       I've been to the Mexican border at Tijuana and San Diego
       </li>
       </ol>
-      <button id="button"
+      <button id="button2"
         onclick="myFunction()">
         Click for another Random Fact </button>
       </div>
