--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
 <p>About Me</p>
     <h1> Judenie </h1>
-    <button id= "button1"
-            onclick="myFunction()">ClickMe!</button>
+    <button id= "SwapName"
+            onclick="myFunction()">NickNames?</button>
+    <div id="myDiv">Junebug</div>
     <h2>Who is Judenie?</h2>
     <div class="image">
       <img src= https://i.postimg.cc/gkkPzzpv/judenie.jpg/ alt=judenie</div>
@@ -42,7 +43,7 @@
       I've been to the Mexican border at Tijuana and San Diego
       </li>
       </ol>
-      <button id="button2"
+      <button id="button"
         onclick="myFunction()">
         Click for another Random Fact </button>
       </div>
